--- a/public/documentation.html
+++ b/public/documentation.html
@@ -1,3 +1,8 @@
 API Title: Movie Features
 
 Function: A server-side web application that displays movie titles, genres, and directors. The user will be able to sign up, update their personal information, and create a list of their favorite movies.
+
+Request                            URL                    Response
+"Get a list of top 10 movies"   /movies
+Find documentation on API       /documentation
+The main page of the index      /
