updated javascript file

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
 
 
 
-    <script type="module" src="server.js"></script>  <!-- Come back to change this -->
+    <script type="module" src="index.js"></script>  <!-- Come back to change this -->
   </body>
 </html>
