--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-    <script type="module" src="index.js"></script>
+    <script type="module" src="/index.js"></script>
     <script type="module" src="server.js"></script>  <!-- Come back to change this -->
   </body>
 </html>
