--- a/public/documentation.html
+++ b/public/documentation.html
@@ -24,9 +24,9 @@
       <td>A JSON object indluding the titles of all movies</td>
     </tr>
     <tr>
-      <td>/movies/:movieData</td>
+      <td>/movies/:movieTitle</td>
       <td>GET</td>
-      <td>Return features about movie</td>
+      <td>Return features about movie by title</td>
       <td>request + response </td>
       <td>None</td>
       <td>A JSON object holding data about all movie details</td>
@@ -34,15 +34,15 @@
     <tr>
       <td>/movies/genre/:genreName</td>
       <td>GET</td>
-      <td>Return data about the movie genre</td>
+      <td>Return data about the movie by genre</td>
       <td>request + response </td>
       <td>None</td>
       <td>A JSON object holding data about a movie's genre</td>
     </tr>
     <tr>
-      <td>/movies/directors/:directorName</td>
+      <td>/movies/director/:directorName</td>
       <td>GET</td>
-      <td>Return data about director </td>
+      <td>Return data about a movie director </td>
       <td>request + response </td>
       <td>None</td>
       <td>A JSON object holding data about the movie's director</td>
@@ -56,7 +56,7 @@
         <td> A JSON object hold the data about a user {name: "Juliet O'hara", username: detective123} </td>
         </tr>
       <tr>
-        <td>/users/:id</td>
+        <td>/users/:Username</td>
         <td>PUT</td>
         <td>Update User's Information</td>
         <td>request + response </td>
@@ -64,7 +64,7 @@
         <td>A JSON object holds the updated username for the user {name: "Juliet O'hara", username: psyschoffice}</td>
       </tr>
       <tr>
-        <td>users/:id/:movieTitle</td>
+        <td>/users/:Username/movies/:movieTitle</td>
         <td>POST</td>
         <td>Add movie to Favorites List</td>
         <td>request + response </td>
@@ -72,7 +72,7 @@
         <td>A message that movieTitle has been successfully added to Favorite's List</td>
       </tr>
       <tr>
-        <td>users/:id/:movieTitle</td>
+        <td>/users/:Username/movies/:movieTitle</td>
         <td>DELETE</td>
         <td>Allow user to delete a movie from Favorites List</td>
         <td>request + response </td>
@@ -80,7 +80,7 @@
         <td>A message that movie has been removed from Favorite's List</td>
       </tr>
       <tr>
-        <td>users/:id/:movieTitle</td>
+        <td>users/:Username</td>
         <td>DELETE</td>
         <td>Allow existing user to deregister account</td>
         <td>request + response  </td>
